--- a/apps/catch-api/package.json
+++ b/apps/catch-api/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "oracledb": "^6.9.0",
     "uuid": "^13.0.0"
   },
